<resources>
    <string name="app_name">DigitalAptechApplication</string>
    <string name="action_settings">Settings</string>

    <string name="press_again_exit">Please press again to exit</string>

    <!--Dashboard-->
    <string name="user_list">User List</string>
    <string name="add_user">Add User</string>

    <!--Add User-->
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>

    <!--Error Message-->
    <string name="error_enter_name">Please enter name</string>
    <string name="error_enter_address">Please enter address</string>
    <string name="error_enter_phn">Please enter phone no.</string>
    <string name="error_enter_valid_phn">Please enter valid phone no.</string>
    <string name="error_enter_email">Please enter email id</string>
    <string name="error_enter_valid_email">Please enter valid email id</string>

    <!--User List-->
    <string name="name_colon">Name:</string>
    <string name="address_colon">Address:</string>
    <string name="email_colon">Email:</string>
    <string name="phone_colon">Phone:</string>
    <string name="no_data">No data available</string>

</resources>
