<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="user"
            type="com.digitalaptechapplication.database.table.UserEntity" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_5sdp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            app:cardBackgroundColor="@android:color/white"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="@dimen/_2sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_colon"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/tv_name_header"
                    android:text="@{user.name}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_address_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name_header"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/address_colon"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_name_header"
                    android:layout_alignTop="@+id/tv_address_header"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/tv_address_header"
                    android:text="@{user.address}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_phone_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_address_header"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/phone_colon"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_address_header"
                    android:layout_alignTop="@+id/tv_phone_header"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/tv_phone_header"
                    android:text="@{user.phone}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_email_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_phone_header"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/email_colon"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_phone_header"
                    android:layout_alignTop="@+id/tv_email_header"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_toEndOf="@+id/tv_email_header"
                    android:text="@{user.email}"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>